fix(router): preserve client pool order (Map.copyOf is unordered, breaks round-robin determinism)